objects/Employee_Information__c.object
<CustomObject>
    <description>User costcenter # as well as Sales Ops Specific attributes</description>
    <fields>
        <fullName>ADPS_AN_Acclivus_Negotiations__c</fullName>
        <label>ADPS-AN - Acclivus Negotiations</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ADPS_AN_Assigned_Date__c</fullName>
        <label>ADPS-AN - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADPS_AN_Completed_Date__c</fullName>
        <label>ADPS-AN - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADPS_DE_Assigned_Date__c</fullName>
        <label>ADPS-DE - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADPS_DE_Completed_Date__c</fullName>
        <label>ADPS-DE - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADPS_DE_New_Hire_Drivers_Ed__c</fullName>
        <label>ADPS-DE - New Hire - DRIVER&apos;s Ed</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ADPS_DL_Assigned_Date__c</fullName>
        <label>ADPS-DL - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADPS_DL_Completed_Date__c</fullName>
        <label>ADPS-DL - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADPS_DL_DOS_Leadership_TOP10_Mantras__c</fullName>
        <label>ADPS-DL - DOS Leadership - TOP10 Mantras</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ADPS_NH_Assigned_Date__c</fullName>
        <label>ADPS-NH - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADPS_NH_Completed_Date__c</fullName>
        <label>ADPS-NH - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADPS_NH_New_Hire__c</fullName>
        <label>ADPS-NH - New Hire</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ADP_Hire_Date__c</fullName>
        <label>ADP Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Email__c</fullName>
        <label>Approval Email</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Finance_Cross_Charged__c</fullName>
        <formula>Cost_Center_Number__r.Finance_Cross_Charged__c</formula>
        <inlineHelpText>Cost Center # is one that finance will cross charge.</inlineHelpText>
        <label>CC Finance Cross Charged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chatter_Free_License__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this is not a sales or service SF license, but a (free) chatter free license</inlineHelpText>
        <label>Chatter Free License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chatter_Plus_License_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chatter Plus/Content Only Licenses $2.76/year/user.</inlineHelpText>
        <label>Chatter Plus/Content Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Grad_Date__c</fullName>
        <label>Class Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Center Number</label>
        <referenceTo>Cost_Centers__c</referenceTo>
        <relationshipLabel>Employee Information</relationshipLabel>
        <relationshipName>Employee_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puerto Rico</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DESS_AM_ADP_Menu__c</fullName>
        <label>DESS-AM - ADP Menu</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DESS_AM_Assigned_Date__c</fullName>
        <label>DESS-AM - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_AM_Completed_Date__c</fullName>
        <label>DESS-AM - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_AT_ADP_Telephony_in_the_Cloud_ATC__c</fullName>
        <label>DESS-AT - ADP Teleph in the Cloud (ATC)</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DESS_AT_Assigned_Date__c</fullName>
        <label>DESS-AT - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_AT_Completed_Date__c</fullName>
        <label>DESS-AT - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_DF_Assigned_Date__c</fullName>
        <label>DESS-DF - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_DF_Completed_Date__c</fullName>
        <label>DESS-DF - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_DF_Deal_Flow__c</fullName>
        <label>DESS-DF - Deal Flow</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DESS_DR_Assigned_Date__c</fullName>
        <label>DESS-DR - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_DR_Completed_Date__c</fullName>
        <label>DESS-DR - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_DR_Drive__c</fullName>
        <label>DESS-DR - Drive</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DESS_FO_Assigned_Date__c</fullName>
        <label>DESS-FO - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_FO_Completed_Date__c</fullName>
        <label>DESS-FO - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_FO_Front_Office_Edge__c</fullName>
        <label>DESS-FO - Front Office Edge</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DESS_IP_Assigned_Date__c</fullName>
        <label>DESS-IP - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_IP_Completed_Date__c</fullName>
        <label>DESS-IP - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_IP_IPNS__c</fullName>
        <label>DESS-IP - IPNS</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DESS_LM_Assigned_Date__c</fullName>
        <label>DESS-LM - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_LM_Completed_Date__c</fullName>
        <label>DESS-LM - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_LM_Lot_Management__c</fullName>
        <label>DESS-LM - Lot Management</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DESS_NW_Assigned_Date__c</fullName>
        <label>DESS-NW - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_NW_Completed_Date__c</fullName>
        <label>DESS-NW - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_NW_Nertworking_101__c</fullName>
        <label>DESS-NW - Networking 101</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DESS_SE_Assigned_Date__c</fullName>
        <label>DESS-SE - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_SE_Completed_Date__c</fullName>
        <label>DESS-SE - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_SE_ServiceEdge__c</fullName>
        <label>DESS-SE - ServiceEdge</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DESS_WS_Assigned_Date__c</fullName>
        <label>DESS-WS - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_WS_Completed_Date__c</fullName>
        <label>DESS-WS - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DESS_WS_Wireless_Solutions__c</fullName>
        <label>DESS-WS - Wireless Solutions</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DISS_HOQ2_HOA_Level1_FY14_Q2__c</fullName>
        <label>DISS-HO-Q2 - HOA Level 1 - FY14 Q2</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DISS_HOQ3_HOA_Level1_FY14_Q3__c</fullName>
        <description>DISS-HO-Q3 - HOA Level 1 - FY14 Q3</description>
        <label>DISS-HO-Q3 - HOA Level 1 - FY14 Q3</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DISS_HO_Q2_Assigned_Date__c</fullName>
        <label>DISS-HO Q2 - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DISS_HO_Q2_Completed_Date__c</fullName>
        <label>DISS-HO Q2 - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DISS_HO_Q3_Assigned_Date__c</fullName>
        <label>DISS-HO Q3 - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DISS_HO_Q3_Completed_Date__c</fullName>
        <label>DISS-HO Q3 - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOS_Region__c</fullName>
        <label>DOS Region #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRVR_BP_Assigned_Date__c</fullName>
        <label>DRVR-BP - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_BP_Buying_Process__c</fullName>
        <label>DRVR-BP - Buying Process</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DRVR_BP_Completed_Date__c</fullName>
        <label>DRVR-BP - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_CT_Assigned_Date__c</fullName>
        <label>DRVR-CT - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_CT_Commercial_Teaching__c</fullName>
        <label>DRVR-CT - Commercial Teaching</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DRVR_CT_Completed_Date__c</fullName>
        <label>DRVR-CT - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_DI_Assigned_Date__c</fullName>
        <label>DRVR-DI - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_DI_Completed_Date__c</fullName>
        <label>DRVR-DI - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_DI_Discovery__c</fullName>
        <label>DRVR-DI - Discovery</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DRVR_DR_Assigned_Date__c</fullName>
        <label>DRVR-DR - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_DR_Completed_Date__c</fullName>
        <label>DRVR-DR - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_DR_Driver__c</fullName>
        <label>DRVR-DR - Driver</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DRVR_IK_Assigned_Date__c</fullName>
        <label>DRVR-IK - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_IK_Completed_Date__c</fullName>
        <label>DRVR-IK - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_IK_Industry_Knowledge__c</fullName>
        <label>DRVR-IK - Industry Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DRVR_MO_Assigned_Date__c</fullName>
        <label>DRVR-MO - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_MO_Completed_Date__c</fullName>
        <label>DRVR-MO - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_MO_Mobilizers__c</fullName>
        <label>DRVR-MO - Mobilizers</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DRVR_RL_Assigned_Date__c</fullName>
        <label>DRVR-RL - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_RL_Completed_Date__c</fullName>
        <label>DRVR-RL - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRVR_RL_Relationships__c</fullName>
        <label>DRVR-RL - Relationships</label>
        <picklist>
            <picklistValues>
                <fullName>Not Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>Optional, except for Sales users</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Enterprise Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Artwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Forms Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Forms Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Install Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightspeed Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Info Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - CDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Digital Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Hoffman Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - PFW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>E_Mail__c</fullName>
        <formula>User__r.Email</formula>
        <label>E-Mail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext__c</fullName>
        <label>Ext</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HR_Manager__c</fullName>
        <label>Manager (HR)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home__c</fullName>
        <label>Home</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Club_Qualified__c</fullName>
        <label>Last Club Qualified</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Notes__c</fullName>
        <label>License Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Status_Del__c</fullName>
        <description>Delete the field later. replace with a formula field.</description>
        <label>License Status_Del</label>
        <picklist>
            <picklistValues>
                <fullName>In Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <formula>IF(User__r.IsActive = FALSE &amp;&amp; User__r.Inactive_Due_to_Inactivity__c = FALSE, &quot;Released&quot;, &quot;In Use&quot;)</formula>
        <label>License Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Employee_Information__c</referenceTo>
        <relationshipLabel>Employee Information</relationshipLabel>
        <relationshipName>R00N40000001lhFTEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Hire_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Hire Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Node__c</fullName>
        <label>Node</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ph_Email__c</fullName>
        <label>Ph. Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ph_Vendor__c</fullName>
        <label>Ph. Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>AT&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bell Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Cellular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Photo_Notes__c</fullName>
        <label>Photo Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Position_Start_Date__c</fullName>
        <label>Position Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Postal__c</fullName>
        <label>Postal</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoffman Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightspeed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSP Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Element_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release Element Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPX_Contact_CreateDate__c</fullName>
        <label>SPX Contact CreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SPX_Contact_ID__c</fullName>
        <label>SPX Contact ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Class__c</fullName>
        <label>Sales Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Start_Date__c</fullName>
        <label>Sales Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>